@@ -23,11 +23,11 @@ INCLUDES = -I$(top_srcdir)/include $(TUXEDO_INCLUDES)
 
 AM_CXXFLAGS = $(TUXEDO_CPPFLAGS) ${PTHREAD_CFLAGS}
 
-if COND_DEBUG
-AM_CXXFLAGS += -g
-else
 if COND_PROFILE
 AM_CXXFLAGS += -g -pg
+else
+if COND_DEBUG
+AM_CXXFLAGS += -g
 endif
 endif
 
