@@ -18,11 +18,11 @@ INCLUDES = -I$(top_srcdir)/include $(MYSQL_INCLUDES)
 
 AM_CXXFLAGS = ${PTHREAD_CFLAGS}
 
-if COND_DEBUG
-AM_CXXFLAGS += -g
-else
 if COND_PROFILE
 AM_CXXFLAGS += -g -pg
+else
+if COND_DEBUG
+AM_CXXFLAGS += -g
 endif
 endif
 
