@@ -17,11 +17,11 @@ INCLUDES = -I$(top_srcdir)/include
 
 AM_CXXFLAGS = ${PTHREAD_CFLAGS}
 
-if COND_DEBUG
-AM_CXXFLAGS += -g
-else
 if COND_PROFILE
 AM_CXXFLAGS += -g -pg
+else
+if COND_DEBUG
+AM_CXXFLAGS += -g
 endif
 endif
 
